its not that hard

--- a/index.html
+++ b/index.html
@@ -41,5 +41,15 @@ function myFunction() {
   alert ("If Deadpool wasnt there than no");
 }
 </script>
+
+Name: <input type="text" id="myText" value="name?">
+
+<button onclick="myFunction()">Try it</button>
+
+<script>
+function myFunction() {
+  document.getElementById("myText").value = "error";
+}
+</script>
   </body>
 </html>
